--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ googleAnalytics = ""
 
   copyright = "&copy;2024 Francesco @ Octosoft"
   sidebarAbout = [
-    "I am a seasoned CTO with experience in multiple domain, from DevOps to MLOps, passing by cloud, data and software engineering. You describe me your idea, I will describe you how to realize it!"
+    "I am a CTO with experience in multiple domain, from DevOps to MLOps, passing by cloud, data and software engineering. You describe me your idea, I will describe you how to realize it!"
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
