--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ googleAnalytics = ""
   style = "blue"
   description = "Experienced professional showcasing versatile skills in Full Stack Development, Data Engineering, and Solution Architecture. Proven track record in spearheading transformative projects, leading teams, and delivering data-driven solutions at a global scale"
 
-  personalImage = "/img/my_linkedin.jpeg"
+  personalImage = "![targets](/img/my_linkedin.jpeg)"
 
   copyright = "&copy;2024 Francesco @ Octosoft"
   sidebarAbout = [
