--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://francescobux.com/'
 languageCode = 'en-us'
 title = 'Francesco Bux - Portfolio Website'
 theme = 'creative-portfolio'
