--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@ theme = 'creative-portfolio'
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "G-J3M4VCLVR1"
 
 
 [params]
